--- a/lang/fi.json
+++ b/lang/fi.json
@@ -303,6 +303,7 @@
         "OneVisit": "1 käynti",
         "OnlyEnterIfRequired": "Kirjoita käyttäjätunnus vain jos SMTP-palvelin vaatii sen",
         "OnlyEnterIfRequiredPassword": "Kirjoita salasana vain jos SMTP-palvelin vaatii sen",
+        "NameShownInTheSenderColumn": "Lähettäjä-sarakkeessa näkyvä nimi",
         "OnlyUsedIfUserPwdIsSet": "Vain jos käyttäjätunnus\/salasana on asetettu. Jos olet epävarma, kysy palveluntarjoajalta.",
         "OpenSourceWebAnalytics": "avoin ja vapaa verkkoanalytiikka-alusta",
         "OperationAtLeast": "Vähintään",
@@ -485,7 +486,7 @@
         "Widgets": "Vimpaimet",
         "Widget": "Vimpain",
         "XComparedToY": "%1$s verrattuna %2$s",
-        "XFromY": "%1$s %2$s:sta",
+        "XFromY": "%1$s sijainnista %2$s",
         "YearlyReport": "vuosittainen",
         "YearlyReports": "Vuosiraportit",
         "YearsDays": "%1$s vuotta %2$s päivää",
@@ -497,7 +498,9 @@
         "YourSessionHasExpired": "Istuntosi on vanhentunut toimettomuuden vuoksi. Kirjaudu uudelleen jatkaaksesi.",
         "ThankYouForUsingMatomo": "Kiitos kun päätit käyttää Matomoa",
         "TheMatomoTeam": "Matomo-tiimi",
-        "PleaseTryAgain": "Yritä uudelleen"
+        "PleaseTryAgain": "Yritä uudelleen",
+        "Comparisons": "Vertailut",
+        "ClickToRemoveComp": "Napsauta poistaaksesi tämän vertailun."
     },
     "Mobile": {
         "AboutPiwikMobile": "Tietoja Matomo Mobilesta",
@@ -517,10 +520,10 @@
         "ConfirmRemoveAccount": "Haluatko poistaa tämän tilin?",
         "DefaultReportDate": "Raportin päivä",
         "EmailUs": "Lähetä sähköpostia",
-        "EnableGraphsLabel": "Näytä graafit",
+        "EnableGraphsLabel": "Näytä kuvaajat",
         "EvolutionGraph": "Historiakuvaaja",
         "HelpUsToImprovePiwikMobile": "Haluatko ottaa käyttöön anonyymin käytön seurannan Matomo Mobileen?",
-        "HowtoDeleteAnAccount": "Poista painamalla pitkään.",
+        "HowtoDeleteAnAccount": "Poista tili painamalla pitkään.",
         "HowtoDeleteAnAccountOniOS": "Poista tili vetämällä vasemmalle",
         "HowtoLoginAnonymous": "Anonyymi kirjautuminen: jätä käyttäjätunnus ja salasana tyhjiksi",
         "HttpIsNotSecureWarning": "Matomo autentikointiavain (\"token_auth\") lähetetään salaamattomana jos käytät http:tä. Suosittelemmen salatun https:n käyttöä. Haluatko jatkaa?",
