--- a/plugins/CoreHome/lang/fi.json
+++ b/plugins/CoreHome/lang/fi.json
@@ -104,6 +104,7 @@
         "StandardReport": "Standardiraportti",
         "FlattenReport": "Litistä raportti",
         "ReportWithMetadata": "Raportti metadatan kera",
+        "ReadMoreOnlineGuide": "Lue lisää tästä aiheesta verkko-oppaasta.",
         "SeeAvailableVersions": "Näytä saatavilla olevat versiot",
         "QuickLinks": "Pikalinkit"
     }
