--- a/plugins/CoreHome/lang/ru.json
+++ b/plugins/CoreHome/lang/ru.json
@@ -106,6 +106,7 @@
         "StandardReport": "Стандартный отчёт",
         "FlattenReport": "Сокращённый отчёт",
         "ReportWithMetadata": "Отчёт с метаданными",
+        "ReadMoreOnlineGuide": "Подробнее об этом читайте в онлайн-руководстве.",
         "SeeAvailableVersions": "Посмотреть доступные версии",
         "QuickLinks": "Быстрые ссылки"
     }
