--- a/plugins/CoreHome/lang/sv.json
+++ b/plugins/CoreHome/lang/sv.json
@@ -106,6 +106,7 @@
         "StandardReport": "Standardrapport",
         "FlattenReport": "Platta till rapport",
         "ReportWithMetadata": "Rapport med metadata",
+        "ReadMoreOnlineGuide": "Läs mer om ämnet i onlineguiden.",
         "SeeAvailableVersions": "Se tillgängliga versioner",
         "QuickLinks": "Snabblänkar"
     }
