--- a/plugins/GeoIp2/lang/it.json
+++ b/plugins/GeoIp2/lang/it.json
@@ -1,7 +1,7 @@
 {
     "GeoIp2": {
         "AssumingNonApache": "Impossibile trovare la funzione apache_get_modules, si suppone che sia un server non-Apache.",
-        "CannotFindGeoIPDatabaseInArchive": "Nessun DBIP valido \/ Nessun database GeoIP trovato nell'archivio tar %1$s!",
+        "CannotFindGeoIPDatabaseInArchive": "Nessun database DBIP \/ GeoIP valido nell'archivio tar %1$s!",
         "CannotFindGeoIPServerVar": "La variabile %s non è impostata. Il tuo server potrebbe non essere correttamente configurato.",
         "CannotListContent": "Impossibile elencare il contenuto per %1$s: %2$s",
         "CannotSetupGeoIPAutoUpdating": "Sembra che tu stia archiviando i tuoi database di geolocalizzazione al di fuori di Matomo (possiamo dirlo perché non ci sono database nella sottodirectory misc, ma il tuo GeoIP funziona). Matomo non può aggiornare automaticamente i database di geolocalizzazione se si trovano al di fuori della directory misc.",
@@ -12,7 +12,7 @@
         "FoundApacheModules": "Matomo ha trovato i seguenti moduli Apache",
         "GeoIPImplHasAccessTo": "Questa implementazione GeoIP ha accesso ai seguenti tipi di database",
         "GeoIPDatabases": "Database GeoIP",
-        "GeoIPLocationProviderDesc_ServerBasedAnonWarn": "Nota: l'anonimizzazione IP non ha alcun effetto sui luoghi segnalati da questo fornitore. Prima di utilizzarlo con la trasformazione in forma anonima degli IP, assicurati che questo non violi alcuna legge sulla privacy a cui puoi essere soggetto.",
+        "GeoIPLocationProviderDesc_ServerBasedAnonWarn": "Nota: l'anonimizzazione IP non ha alcun effetto sui luoghi segnalati da questo fornitore. Prima di utilizzarlo per la trasformazione in forma anonima degli IP, assicurati che questo non violi alcuna legge sulla privacy a cui puoi essere soggetto.",
         "GeoIPLocationProviderNotRecommended": "La geolocalizzazione sta funzionando ma tu non stai utilizzando uno dei provider raccomandati.",
         "GeoIPNoDatabaseFound": "Questa implementazione GeoIP non ha potuto trovare un database.",
         "GeoIPNoServerVars": "Matomo non riesce a trovare nessuna delle variabili %s GeoIP.",
@@ -24,24 +24,24 @@
         "HowToSetupGeoIP": "Come impostare una geolocalizzazione accurata con dbip",
         "HowToSetupGeoIP_Step1": "%1$sScarica%2$s il database DBIP City Lite da %3$sdbip%4$s.",
         "HowToSetupGeoIP_Step2": "Estrai questo file e copia il risultato, %1$snella sottodirectory %2$smisc%3$s di Matomo e rinominalo come %4$s (puoi farlo sia da FTP che da SSH).",
-        "HowToSetupGeoIP_Step3": "Ricarica questa schermata. Il provider %1$sDBIP \/ GeoIP (PHP)%2$s verrà pra %3$sinstallato%4$s. Selezionalo.",
-        "HowToSetupGeoIP_Step4": "E hai finito! Hai appena impostato Matomo per utilizzare DBIP, il che significa che sarai in grado di vedere le regioni e le città dei tuoi visitatori insieme a informazioni sul paese molto accurate.",
+        "HowToSetupGeoIP_Step3": "Ricarica questa schermata. Il provider %1$sDBIP \/ GeoIP (PHP)%2$s verrà ora %3$sinstallato%4$s. Selezionalo.",
+        "HowToSetupGeoIP_Step4": "E hai finito! Hai appena impostato Matomo per utilizzare DBIP, il che significa che sarai in grado di vedere le regioni e le città dei tuoi visitatori insieme a informazioni molto accurate sul paese.",
         "HowToSetupGeoIPIntro": "Sembra che tu non abbia una configurazione di Geolocalizzazione accurata. Questa è una funzionalità utile, e senza di essa non si avranno informazioni accurate e complete sulla localizzazione dei tuoi visitatori. Ecco come puoi iniziare a usarla rapidamente:",
         "HowToInstallApacheModule": "Come posso installare il modulo GeoIP per Apache?",
         "HowToInstallNginxModule": "Come posso installare il modulo GeoIP per Nginx?",
         "HttpServerModule": "Modulo Server HTTP",
-        "InvalidGeoIPUpdatePeriod": "Periodo non valido per l'updater GeoIP: %1$s. I valori validi sono: %2$s.",
+        "InvalidGeoIPUpdatePeriod": "Periodo non valido per il programma di aggiornamento di GeoIP: %1$s. I valori validi sono: %2$s.",
         "IPurchasedGeoIPDBs": "Ho acquistato database molto accurati da %3$sdbip%4$s o %1$sMaxMind%2$s e voglio impostare gli aggiornamenti automatici.",
         "ISPDatabase": "Database ISP",
         "IWantToDownloadFreeGeoIP": "Voglio scaricare il database gratuito DBIP...",
         "PluginDescription": "Fornisce provider di localizzazione DBIP \/ GeoIP2.",
         "LocationDatabase": "Database Località",
         "LocationDatabaseHint": "Un database località è un database di nazioni, regioni o città.",
-        "LocationProviderDesc_Php": "Questo provider di localizzazione è il più semplice da installare in quanto non richiede la configurazione del server (ideale per l'hosting condiviso!). Utilizza un database DBIP o GeoIP 2 e l'API PHP di MaxMind per determinare con precisione la posizione dei visitatori.",
+        "LocationProviderDesc_Php": "Questo provider di localizzazione è il più semplice da installare in quanto non richiede la configurazione del server (ideale per hosting condivisi!). Utilizza un database DBIP o GeoIP 2 e l'API PHP di MaxMind per determinare con precisione la posizione dei visitatori.",
         "LocationProviderDesc_Php_WithExtension": "Questo provider di posizione viene velocizzato dall'estensione installata %1$smaxminddb%2$s.",
         "LocationProviderDesc_ServerModule": "Questo provider di posizione utilizza il modulo GeoIP 2 che è stato installato nel tuo server HTTP. Questo provider è veloce e accurato, ma %1$s può solo essere utilizzato con il normale tracciamento del browser.%2$s",
         "LocationProviderDesc_ServerModule2": "Se devi importare i file di log o fare qualcos'altro che richiede l'impostazione di indirizzi IP, usa %3$sl'implementazione PHP geoIP 2%4$s e installa %1$sl'estensione maxminddb%2$s.",
-        "NotManagingGeoIPDBs": "Matomo non gestisce attualmente alcun database DBIP o MaxMind.",
+        "NotManagingGeoIPDBs": "Matomo al momento non gestisce alcun database DBIP o MaxMind.",
         "UnsupportedArchiveType": "Si è incontrato un archivio di tipo non supportato %1$s.",
         "UpdaterHasNotBeenRun": "Il programma di aggiornamento non è mai stato eseguito.",
         "UpdaterIsNotScheduledToRun": "Non è pianificato un suo futuro avvio.",
