--- a/plugins/Live/lang/ru.json
+++ b/plugins/Live/lang/ru.json
@@ -36,6 +36,10 @@
         "ToggleActions": "Переключить видимость всех действий",
         "TopVisitedPages": "Самые посещаемые страницы",
         "VisitsLog": "Журнал посещений",
+        "QueryMaxExecutionTimeExceeded": "Выполнение запроса заняло слишком много времени.",
+        "QueryMaxExecutionTimeExceededReasonDateRange": "Это может произойти, если выбранный диапазон дат слишком велик. Пожалуйста, попробуйте выбрать меньший диапазон дат.",
+        "QueryMaxExecutionTimeExceededReasonSegment": "Это может произойти, если выбранный сегмент не соответствует ни одному посещению. Пожалуйста, попробуйте проверить выбранный сегмент.",
+        "QueryMaxExecutionTimeExceededReasonUnknown": "Пожалуйста, попробуйте еще раз. Если это происходит неоднократно, пожалуйста, свяжитесь с администратором или поддержкой.",
         "VisitorLog": "Журнал посещений",
         "VisitorLogDocumentation": "Эта таблица показывает последние посещения за выбранный период. Вы можете видеть последнее посещение пользователя при наведении мыши на дату посещения. %1$s Если период включает сегодняшний день, вы можете наблюдать за посетителями в реальном времени! %2$s Данные здесь всегда отображаются в режиме реального времени вне зависимости от того, как часто вы используете архивацию по крону.",
         "VisitorProfile": "Профиль посетителя",
