--- a/plugins/Marketplace/lang/it.json
+++ b/plugins/Marketplace/lang/it.json
@@ -8,6 +8,7 @@
         "AllowedUploadFormats": "Tramite questa pagina puoi caricare un plugin o un tema nel formato .zip.",
         "Authors": "Autori",
         "Browse": "Naviga",
+        "SupportMatomoThankYou": "Qualsiasi acquisto contribuirà a finanziare il futuro del progetto open source Matomo. Grazie per il vostro sostegno!",
         "LatestMarketplaceUpdates": "Ultimi Aggiornamenti nel Marketplace",
         "BackToMarketplace": "Torna al Marketplace",
         "BrowseMarketplace": "Guarda nel Marketplace",
