--- a/plugins/Marketplace/lang/tr.json
+++ b/plugins/Marketplace/lang/tr.json
@@ -8,6 +8,7 @@
         "AllowedUploadFormats": "Buradan .zip biçiminde bir uygulama eki ya da tema dosyası yükleyebilirsiniz.",
         "Authors": "Geliştiriciler",
         "Browse": "Gözat",
+        "SupportMatomoThankYou": "Yapılan her satış Matomo açık kaynak projesinin sürmesine destek olur. Desteğiniz için teşekkürler!",
         "LatestMarketplaceUpdates": "Son Mağaza Güncellemeleri",
         "BackToMarketplace": "Mağazaya geri dön",
         "BrowseMarketplace": "Mağazaya Gözat",
