--- a/plugins/PrivacyManager/lang/ru.json
+++ b/plugins/PrivacyManager/lang/ru.json
@@ -6,6 +6,8 @@
         "AnonymizeIpMaskLengtDescription": "Выберите, как много байтов IP-адреса посетителей должно быть скрыто.",
         "AnonymizeIpMaskLength": "%1$s байт(ов), например, %2$s",
         "ClickHereSettings": "Нажмите здесь, чтобы перейти к настройкам: %s.",
+        "WhenDoINeedConsent": "Когда мне нужно запрашивать согласие пользователя?",
+        "HowDoIAskForConsent": "Как я могу попросить пользователей дать согласие?",
         "AnonymizeUserId": "Заменить ID пользователя всевдонимом",
         "CurrentDBSize": "Текущий размер базы данных",
         "DBPurged": "База данных очищена.",
