--- a/plugins/ScheduledReports/lang/fi.json
+++ b/plugins/ScheduledReports/lang/fi.json
@@ -5,25 +5,27 @@
         "AggregateReportsFormat_TablesAndGraphs": "Näytä taulukot ja kuvaajat kaikille raporteille",
         "AggregateReportsFormat_TablesOnly": "(oletus) Näytä rapottien taulukot (kuvaajat vain tärkeimmille arvoille)",
         "AlsoSendReportToTheseEmails": "Lähetä raportti myös näihin osoitteisiin (yksi osoite per rivi):",
-        "AreYouSureDeleteReport": "Haluatko varmasti poistaa tämän raportin?",
+        "AreYouSureDeleteReport": "Haluatko varmasti poistaa tämän raportin ja sen ajastuksen?",
         "CancelAndReturnToReports": "Peruuta ja %1$spalaa raporttilistaan%2$s",
         "CreateAndScheduleReport": "Luo ja ajasta raportti",
         "CreateReport": "Luo raportti",
         "CustomVisitorSegment": "Asiakasryhmä:",
         "DescriptionOnFirstPage": "Tämä kuvaus näytetään raportin ensimmäisellä sivulla.",
         "DisplayFormat_TablesOnly": "Näytä vain taulukot (ei kuvaajia)",
-        "EmailHello": "Hei,",
+        "EmailHello": "Hei",
         "EmailReports": "Sähköpostiraportit",
-        "EmailSchedule": "Sähköpostiaikataulu",
+        "EmailSchedule": "Sähköpostin ajastus",
         "EvolutionGraph": "Näytä historiakuvaajat top-%s arvolle",
         "FrontPage": "Etusivu",
         "PersonalEmailReports": "Henkilökohtaiset sähköpostiraportit",
-        "MonthlyScheduleHelp": "Kuukausittainen aikataulu: raportti lähetetään kuun ensimmäisenä päivänä.",
+        "MonthlyScheduleHelp": "Kuukausittainen ajastus: raportti lähetetään kuun ensimmäisenä päivänä.",
         "MustBeLoggedIn": "Sinun täytyy olla kirjautuneena sisään ennen kustomoitujen raporttien luomista ja ajastamista.",
         "NoRecipients": "Tällä raportilla ei ole vastaanottajia",
         "Pagination": "Sivu %1$s\/%2$s",
         "PiwikReports": "Matomo-raportit",
-        "PleaseFindBelow": "Alla on raporttisi %1$s sivulle %2$s.",
+        "PleaseFindAttachedFile": "Liitteenä on raporttisi tyyppiä \"%1$s\" sivustolle %2$s.",
+        "SentFromX": "Lähettänyt %s.",
+        "PleaseFindBelow": "Alla on raporttisi tyyppiä \"%1$s\" sivustolle %2$s.",
         "PluginDescription": "Luo mukautettuja raportteja ja aikatauluta ne lähettäväksi päivittäin, viikoittain tai kuukausittain yhdelle tai useammalle ihmiselle. Useat eri raporttimuodot ovat tuettuja (html, pdf, csv, kuvat).",
         "ReportFormat": "Raportin muoto",
         "ReportHour": "Lähetä raportti kello %s",
@@ -44,12 +46,14 @@
         "TopLinkTooltip": "Voit luoda sähköpostiraportin, jotta saat Matomon tilastot suoraan sähköpostiin automaattisesti.",
         "TopOfReport": "Takaisin ylös",
         "UpdateReport": "Päivitä raportti",
-        "WeeklyScheduleHelp": "Viikkoaikataulu: raportti lähetetään joka maanantai.",
+        "WeeklyScheduleHelp": "Viikottainen ajastus: raportti lähetetään joka maanantai.",
         "Unsubscribe": "Lopeta tilaus",
         "ReportUnsubscribe": "Lopeta raportin tilaus",
         "UnsubscribeReportConfirmation": "Haluatko varmasti lopettaa raportin %1$s tilauksen?",
         "SuccessfullyUnsubscribed": "Raportin %1$s tilaus on lopetettu.",
         "UnsubscribeFooter": "Jos et halua vastaanottaa tätä raporttia enää jatkossa, klikkaa linkkiä: %1$s",
-        "NoSubscriptionFound": "Tilausta ei löytynyt. Kenties raportin tilaus oli jo lopetettu tai se oli poistettu."
+        "NoTokenProvided": "URL-osoitteessa ei ollut polettia",
+        "NoSubscriptionFound": "Tilausta ei löytynyt. Kenties raportin tilaus oli jo lopetettu tai se oli poistettu.",
+        "ReportPeriod": "Raportin aikaväli"
     }
 }
