--- a/plugins/SitesManager/lang/fi.json
+++ b/plugins/SitesManager/lang/fi.json
@@ -33,6 +33,11 @@
         "GlobalListExcludedUserAgents_Desc": "Jos käyttäjäagentin merkkijono sisältää joitakin määrittelemistäsi merkkijonoista, kävijän käynti suljetaan pois Matomosta.",
         "GlobalSettings": "Yleiset asetukset",
         "GlobalWebsitesSettings": "Yleiset sivustojen asetukset",
+        "InstallationGuides": "Asennusoppaat",
+        "InstallationGuidesIntro": "Tarjoamme vaiheittaiset ohjeet selittäen, kuinka upottaa seurantakoodi suosittuihin CMS-ohjelmistoihin ja sivustorakentajiin:",
+        "ExtraInformationNeeded": "Kun asetat Matomon järjestelmääsi, saatat tarvita seuraavia tietoja:",
+        "Integrations": "Integraatiot",
+        "HelpExcludedIpAddresses": "Kirjoita lista IP-osoitteista, yksi per rivi, joita et halua Matomon seuraavan. Voit käyttää CIDR-notaatiota, esim. %1$s tai käyttää jokerimerkkejä, esim. %2$s tai %3$s",
         "JsTrackingTagHelp": "Lisää tämä JavaScript-seurantakoodi kaikille seurattaville sivuille",
         "KeepURLFragments": "Sivun URL-fragmenttien seuranta",
         "KeepURLFragmentsHelp": "Jos allaolevaa ruutua ei ole rastitettu, sivun URL fragmentit (kaikki mikä tulee %1$s jälkeen) poistetaan seurannassa: %2$s on seurannassa %3$s",
@@ -67,6 +72,7 @@
         "ShowTrackingTag": "näytä seurantakoodi",
         "Sites": "Sivustot",
         "SiteSearchUse": "Voit käyttää Matomoa seurataksesi ja raportoidaksesi, mitä kävijät etsivät sivustosi sisäisellä hakukoneella.",
+        "SiteWithoutDataTitle": "Dataa ei ole vielä kerätty, määritä alla",
         "SiteWithoutDataDescription": "Tämän sivuston analytiikkatietoja ei ole vielä kerätty.",
         "SiteWithoutDataSetupTracking": "Aseta alapuolella oleva %1$sseurantakoodi%2$s sivustollesi tai mobiilisovellukseen, jos et ole sitä vielä tehnyt.",
         "SiteWithoutDataMessageDisappears": "Tämä viesti poistuu näkyvistä, kun tämän sivuston kävijöistä voidaan näyttää kerättyjä tietoja.",
