--- a/plugins/SitesManager/lang/it.json
+++ b/plugins/SitesManager/lang/it.json
@@ -34,6 +34,10 @@
         "GlobalListExcludedUserAgents_Desc": "Se la stringa dello user agent del visitatore contiene una di quelle da te specificate, il visitatore sarà escluso da Matomo.",
         "GlobalSettings": "Impostazioni generali",
         "GlobalWebsitesSettings": "Impostazioni globali per i siti",
+        "InstallationGuides": "Guide all'Installazione",
+        "InstallationGuidesIntro": "Forniamo guide dettagliate che spiegano come incorporare il codice di monitoraggio per alcuni noti costruttori di siti Web e CMS:",
+        "ExtraInformationNeeded": "Per installare Matomo nel tuo sistema, potresti aver bisogno delle seguenti informazioni:",
+        "Integrations": "Integrazioni",
         "HelpExcludedIpAddresses": "Immetti un elenco di IP, uno per riga, che vuoi escludere dal tracciamento di Matomo. Puoi usare la notazione CIDR, es. %1$s oppure puoi utilizzare dei caratteri jolly, es. %2$s o %3$s",
         "JsTrackingTagHelp": "Qui è visualizzato il codice JavaScript da includere in tutte le pagine che vuoi vengano controllate da Matomo",
         "KeepURLFragments": "Tracciamento frammenti URL Pagina",
