--- a/plugins/SitesManager/lang/ru.json
+++ b/plugins/SitesManager/lang/ru.json
@@ -7,6 +7,7 @@
         "ChangingYourTimezoneWillOnlyAffectDataForward": "Изменение вашего часового пояса только повлияет на то, что данные будут учитываться наперёд, и никак не повлияет на существующие данные.",
         "Currency": "Валюта",
         "CurrencySymbolWillBeUsedForGoals": "Символ валюты будет отображен после целей выручки.",
+        "CustomizeJavaScriptTracker": "Настройте отслеживание JavaScript",
         "DefaultCurrencyForNewWebsites": "Валюта по умолчанию для новых сайтов",
         "DefaultTimezoneForNewWebsites": "Часовой пояс по умолчанию для новых сайтов",
         "DeleteConfirm": "Вы действительно желаете удалить этот сайт %s?",
@@ -33,6 +34,10 @@
         "GlobalListExcludedUserAgents_Desc": "Если строка user-agent'а посетителя содержит строки, которые вы указали – Matomo не будет учитывать посещение.",
         "GlobalSettings": "Общие настройки",
         "GlobalWebsitesSettings": "Общие настройки сайтов",
+        "InstallationGuides": "Руководства по установке",
+        "InstallationGuidesIntro": "Мы предоставляем пошаговые руководства, объясняющие, как встроить код отслеживания для некоторых популярных CMS и разработчиков сайтов:",
+        "ExtraInformationNeeded": "Для настройки Matomo в вашей системе вам может потребоваться следующая информация:",
+        "Integrations": "Интеграции",
         "HelpExcludedIpAddresses": "Введите список IP-адресов, по одному на строку, которые вы хотите исключить из отслеживания Matomo. Вы можете использовать нотацию CIDR, например: %1$s или вы можете использовать знаки подстановки, например: %2$s или %3$s",
         "JsTrackingTagHelp": "Этот код JavaScript необходимо вставить на все ваши страницы",
         "KeepURLFragments": "Отслеживать фрагменты URL страницы",
@@ -82,11 +87,20 @@
         "UTCTimeIs": "Время UTC: %s.",
         "OnlyMatchedUrlsAllowed": "Отслеживать только те посещения и действия, у которых URL-адрес действия начинается с одного из указанных URL-адресов.",
         "OnlyMatchedUrlsAllowedHelp": "Когда включено, Matomo будет отслеживать только внутренние действия, когда URL-адрес страницы является одним из известных URL-адресов вашего веб-сайта. Это не позволяет людям рассылать вашу аналитику с URL-адресами для других веб-сайтов.",
+        "OnlyMatchedUrlsAllowedHelpExamples": "Домен и путь должны точно совпадать, и каждый действительный поддомен должен быть указан отдельно. Например, когда известны URL-адреса «http:\/\/example.com\/path» и «http:\/\/good.example.com», отслеживание запросов для «http:\/\/example.com\/otherpath» или «http:\/\/bad.example.com» игнорируются.",
         "WebsitesManagement": "Управление сайтами",
         "XManagement": "Управление %s",
         "ChooseMeasurableTypeHeadline": "Чтобы вы хотели измерить?",
         "YouCurrentlyHaveAccessToNWebsites": "Количество сайтов, к которым у вас есть доступ: %s.",
         "YourCurrentIpAddressIs": "Ваш IP: %s",
-        "DeleteSiteExplanation": "Удаление веб-сайта приведет к удалению всех данных журнала, которые были собраны для него. Это действие является постоянным и не может быть отменено."
+        "DeleteSiteExplanation": "Удаление веб-сайта приведет к удалению всех данных журнала, которые были собраны для него. Это действие является постоянным и не может быть отменено.",
+        "EmailInstructionsButton": "Отправить эти инструкции по электронной почте",
+        "EmailInstructionsSubject": "Код отслеживания Matomo Analytics",
+        "EmailInstructionsDocsPlainText": "Если вы хотите не только отслеживать просмотры страниц, ознакомьтесь с документацией Matomo по адресу %1$s.",
+        "EmailInstructionsGenerateTrackingCode": "Вы также можете создать индивидуальный код отслеживания %1$s.",
+        "EmailInstructionsSiteDetailsHeading": "Детали вашего сайта",
+        "EmailInstructionsSiteDetails": "Эти данные понадобятся вам для использования API или SDK для отслеживания посещений Matomo.",
+        "EmailInstructionsYourSiteId": "ID вашего сайта: %1$s",
+        "EmailInstructionsYourTrackingUrl": "Ваш URL отслеживания: %1$s"
     }
 }
