--- a/plugins/VisitorInterest/lang/fi.json
+++ b/plugins/VisitorInterest/lang/fi.json
@@ -1,9 +1,9 @@
 {
     "VisitorInterest": {
         "BetweenXYMinutes": "%1$s-%2$s min",
-        "BetweenXYSeconds": "%1$s-%2$ss",
+        "BetweenXYSeconds": "%1$s-%2$s s",
         "ColumnPagesPerVisit": "Sivuja \/ käynti",
-        "ColumnVisitDuration": "Käyntien kesto",
+        "ColumnVisitDuration": "Käynnin kesto",
         "Engagement": "Sitoutuminen",
         "NPages": "%s sivua",
         "OnePage": "1 sivu",
@@ -11,9 +11,9 @@
         "VisitNum": "Käynnin numero",
         "VisitsByDaysSinceLast": "Käynnit lajiteltuna aikavälillä edelliseen käyntiin",
         "visitsByVisitCount": "Käynnit käyntinumeron mukaan",
-        "VisitsPerDuration": "Käynnit pituuden mukaan",
-        "VisitsPerNbOfPages": "Käynnit sivujen mukaan",
-        "WidgetLengths": "Käynnin pituus",
+        "VisitsPerDuration": "Käynnit keston mukaan",
+        "VisitsPerNbOfPages": "Käynnit sivujen määrän mukaan",
+        "WidgetLengths": "Käyntien pituus",
         "WidgetLengthsDocumentation": "Tässä raportissa näet, kuinka moni käynti kesti tietyn ajan. Aluksi tämä raportti on tagipilvenä. Yleisimmät kestot näytetään isommalla fontilla.",
         "WidgetPages": "Sivuja \/ käynti",
         "WidgetPagesDocumentation": "Tässä raportissa näet, kuinka monella käynnillä oli tietty määrä sivunlatauksia. Aluksi tämä raportti on tagipilvenä. Yleisimmät sivumäärät näytetään isommalla fontilla.",
