--- a/plugins/VisitsSummary/lang/fi.json
+++ b/plugins/VisitsSummary/lang/fi.json
@@ -1,22 +1,22 @@
 {
     "VisitsSummary": {
-        "AverageGenerationTime": "keskimääräinen sivun ladonta-aika",
+        "AverageGenerationTime": "keskimääräinen sivun koostamisaika",
         "AverageVisitDuration": "keskimääräisen käynnin kesto",
         "GenerateQueries": "%s kyselyä ajettu",
         "GenerateTime": "%s sekuntia sivun luomiseen",
         "MaxNbActions": "suurin määrä toimintoja käynnillä",
         "NbActionsDescription": "%s toimintoa (sivua, latausta ja lähtevää linkkiä)",
-        "NbActionsPerVisit": "toimintoa (sivulatausta, latausta, poistumista and sivun sisäistä hakua) per käynti",
+        "NbActionsPerVisit": "toimintoa (sivulatausta, latausta, poistumista ja sivun sisäistä hakua) per käynti",
         "NbDownloadsDescription": "latausta",
         "NbKeywordsDescription": "ainutkertaista avainsanaa",
         "NbOutlinksDescription": "poistumista",
         "NbPageviewsDescription": "sivukatselua",
-        "NbSearchesDescription": "hakuja sivustolla",
+        "NbSearchesDescription": "hakua sivustolla",
         "NbUniqueDownloadsDescription": "ainutkertaista latausta",
         "NbUniqueOutlinksDescription": "ainutkertaista poistumista",
         "NbUniquePageviewsDescription": "ainutkertaista sivulatausta",
         "NbUniqueVisitors": "ainutkertaista kävijää",
-        "NbUsersDescription": "kävijää",
+        "NbUsersDescription": "käyttäjää",
         "NbVisitsDescription": "käyntiä",
         "NbVisitsBounced": "käyntiä on kimmonnut (lähtenyt sivustolta heti ensimmäisen sivun nähtyään)",
         "PluginDescription": "Raportoi yleiset analytiikkametriikat: käynnit, uniikit kävijät, toimintojen määrän jne.",
