--- a/plugins/WebsiteMeasurable/lang/fi.json
+++ b/plugins/WebsiteMeasurable/lang/fi.json
@@ -2,6 +2,6 @@
     "WebsiteMeasurable": {
         "Website": "Sivusto",
         "Websites": "Sivustot",
-        "WebsiteDescription": "Sivusto on tyypillisesti kokoelma sivuja saman verkko-osoitteen alla."
+        "WebsiteDescription": "Sivusto on tyypillisesti kokoelma sivuja saman verkkotunnuksen alla."
     }
 }
