--- a/plugins/CoreAdminHome/lang/ru.json
+++ b/plugins/CoreAdminHome/lang/ru.json
@@ -29,6 +29,7 @@
         "JSTracking_CampaignKwdParam": "Параметр Ключевого слова кампании",
         "JSTracking_CampaignNameParam": "Параметр Имени кампании",
         "JSTracking_CodeNoteBeforeClosingHead": "Убедитесь, что этот код находится на каждой странице вашего вебсайта. Мы рекомендуем вставить его непосредственно перед закрывающим %1$s тегом.",
+        "JSTracking_CodeNoteBeforeClosingHeadEmail": "Убедитесь, что этот код встроен в элемент script на каждой странице вашего сайта. Мы рекомендуем вставить его непосредственно перед закрывающим тегом head.",
         "JSTracking_CustomCampaignQueryParam": "Использовать пользовательские имена параметров в запросе для названия кампании и ключевого слова",
         "JSTracking_CrossDomain": "По умолчанию, ID посетителя, которое идентифицирует уникального посетителя, хранится в файлах cookies браузера, которые доступны только страницам этого же домена. Включение кросс-доменной связи позволяет вам отслеживать все действия и просмотры страниц определенного пользователя за одно посещение, даже если он просматривал страницы на нескольких доменах. Когда пользователь нажимает на одну из ссылок на вашем веб-сайте , будет добавлен параметр URL pk_vid, возвращающий ID посетителя.",
         "JSTracking_CrossDomain_NeedsMultipleDomains": "Примечание: чтобы использовать кросс-доменное соединение, вы должны указать более одного домена (URL) для своего сайта.",
@@ -51,7 +52,10 @@
         "JSTracking_VisitorCustomVars": "Отслеживать пользовательские переменные для посетителя",
         "JSTracking_VisitorCustomVarsDesc": "Например, имя переменной «Тип», а значение — «Клиент».",
         "JSTracking_EndNote": "Примечание: Вы можете сгенерировать пользовательский код отслеживания в разделе для администратора %1$sКод отслеживания%2$s.",
+        "JSTrackingIntro1": "Вы можете отслеживать посетителей на вашем сайте разными способами. Рекомендуемый способ сделать это через JavaScript. Чтобы использовать этот метод, вы должны убедиться, что на каждой веб-странице вашего сайта есть некоторый код JavaScript, который вы можете сгенерировать здесь.",
         "JSTrackingIntro2": "Как только вы получили JavaScript-код для вашего сайта, скопируйте и вставьте его на все страницы вашего сайта, на которых вы хотите отслеживать посетителей.",
+        "JSTrackingIntro3a": "На большинстве веб-сайтов, блогов, CMS вы можете использовать готовый плагин, для установки кода отслеживания. (Смотрите наш %1$s список плагинов, используемых для интеграции Matomo %2$s.)",
+        "JSTrackingIntro3b": "Если плагина не существует, вы можете отредактировать шаблоны вашего сайта и добавить код отслеживания JavaScript в тег &lt;\/head&gt;, который часто определяется в файлах header.php, header.tpl или аналогичных.",
         "JSTrackingIntro4": "Если вы не хотите или не можете использовать JavaScript, %1$sвоспользуйтесь отслеживанием посетителей через изображение%2$s.",
         "JSTrackingIntro5": "Если вы хотите больше, чем простое отслеживание страниц, пожалуйста, ознакомьтесь с %1$sMatomo Javascript Tracking documentation%2$s для просмотра всех функций. С помощью этих функций вы можете отслеживать цели, пользовательские переменные, заказы электронной коммерции, неоформленные заказы и многое другое.",
         "LogoNotWriteableInstruction": "Чтобы использовать собственное лого вместо стандартного Matomo, откройте для записи эту папку: %1$s Matomo нужен доступ на запись к вашим лого, хранящимся в файлах %2$s.",
@@ -110,6 +114,7 @@
         "CheckToOptIn": "Установите этот флажок, чтобы подписаться.",
         "MissingTrackingCodeEmailSubject": "Нет трафика для %s записанным Matomo Analytics, начните сейчас",
         "JsTrackingCodeMissingEmail1": "Несколько дней назад вы добавили веб-сайт %s в Matomo Analytics. Мы только что проверили, но Matomo не зарегистрировал трафик на этом сайте.",
+        "JsTrackingCodeMissingEmail2": "Чтобы начать отслеживать данные и получать информацию о своих пользователях, вам необходимо настроить отслеживание на своем веб-сайте или в мобильном приложении. Для сайтов просто вставьте код отслеживания прямо перед тегом %s",
         "JsTrackingCodeMissingEmail3": "Чтобы найти и настроить свой код отслеживания, %1$sнажмите здесь%2$s (или посмотрите %3$sруководство по клиенту отслеживания JavaScript%4$s).",
         "TrackingFailuresIntroduction": "На этой странице перечислены ошибки отслеживания, которые произошли в последние %s дн. Обратите внимание, что регистрируются только самые распространенные ошибки отслеживания, а не все.",
         "NoKnownFailures": "Нет известных ошибок отслеживания.",
@@ -128,6 +133,7 @@
         "ConfirmDeleteThisTrackingFailure": "Вы уверены, что хотите удалить эту ошибку отслеживания?",
         "TrackingFailuresEmailSubject": "Отслеживание ошибок в Matomo Analytics",
         "TrackingFailuresEmail1": "Это просто для того, чтобы вы знали, что в последние дни произошло %s различных типов ошибок отслеживания.",
-        "TrackingFailuresEmail2": "Чтобы просмотреть все неудавшиеся запросы отслеживания, %1$sнажмите здесь%2$s."
+        "TrackingFailuresEmail2": "Чтобы просмотреть все неудавшиеся запросы отслеживания, %1$sнажмите здесь%2$s.",
+        "ImportFromGoogleAnalytics": "Импорт из Google Analytics"
     }
 }
