--- a/plugins/CoreUpdater/lang/fi.json
+++ b/plugins/CoreUpdater/lang/fi.json
@@ -28,6 +28,8 @@
         "InstallingTheLatestVersion": "Asennetaan uusinta versiota",
         "LatestBetaRelease": "Viimeisin beta-julkaisu",
         "LatestStableRelease": "Viimeisin vakaa julkaisu",
+        "LatestXStableRelease": "Viimeisin vakaa %s",
+        "LatestXBetaRelease": "Viimeisin beta %s",
         "LtsSupportVersion": "Pitkään tuettu versio",
         "ListOfSqlQueriesFYI": "Tiedoksesi: tässä ovat SQL-kyselyt ja konsolikomennot, jotka suoritetaan tietokantasi päivityksen yhteydessä Matomon versioon %s",
         "TheseSqlQueriesWillBeExecuted": "Nämä SQL-kyselyt suoritetaan:",
