--- a/plugins/CoreUpdater/lang/ru.json
+++ b/plugins/CoreUpdater/lang/ru.json
@@ -24,6 +24,7 @@
         "HelpMessageIntroductionWhenError": "Выше показывается код ошибки ядра системы. Она поможет Вам объяснить причину ошибки, но если же Вам необходима дополнительная помощь, пожалуйста:",
         "HelpMessageIntroductionWhenWarning": "Обновление завершено успешно, однако в процессе возникло несколько предупреждений. Пожалуйста, прочтите примечания ниже. Для дополнительной помощи:",
         "HighTrafficPiwikServerEnableMaintenance": "Если вы управляете сервером Matomo с большим объемом трафика, мы рекомендуем %1$sна мгновение выключить Отслеживание посетителей и переключить Пользовательский интерфейс Matomo в режим%2$s поддержки.",
+        "IncompatbilePluginsWillBeDisabledInfo": "Примечание: некоторые плагины не совместимы с Matomo %s. Мы обновим их, если на Marketplace появилось обновление, иначе мы отключим их при обновлении:",
         "InstallingTheLatestVersion": "Установка последней версии",
         "LatestBetaRelease": "Последний тестовый выпуск",
         "LatestStableRelease": "Последний стабильный выпуск",
