--- a/plugins/Diagnostics/lang/ru.json
+++ b/plugins/Diagnostics/lang/ru.json
@@ -1,9 +1,14 @@
 {
     "Diagnostics": {
         "ConfigFileTitle": "Файл конфигурации",
+        "MysqlTemporaryTablesWarning": "Разрешение MySQL CREATE TEMPORARY TABLES требуется для правильной работы Matomo.",
+        "MysqlTransactionLevel": "Изменение уровня изоляции транзакции не поддерживается. Архивация все равно будет работать, но она может быть медленнее, поэтому рекомендуется, например, изменить `binlog_format` на` row` если возможно.",
         "MysqlMaxPacketSize": "Максимальный размер пакета",
         "MysqlMaxPacketSizeWarning": "Для вашей базы данных рекомендовано установить размер 'max_allowed_packet' минимум %1$s. Сейчас он - %2$s.",
+        "ConfigFileIntroduction": "Здесь вы можете просмотреть конфигурацию Matomo. Если вы используете Matomo в среде с балансировкой нагрузки, страница может отличаться в зависимости от того, с какого сервера эта страница загружена. Строки с другим цветом фона изменяют значения конфигурации, указанные, например, в %1$s файле.",
         "HideUnchanged": "Если вы хотите видеть только измененные значения, вы можете %1$sспрятать все неизмененные значения%2$s.",
-        "Sections": "Разделы"
+        "Sections": "Разделы",
+        "CronArchivingLastRunCheck": "Последнее успешное завершение архивирования",
+        "CronArchivingHasNotRun": "Архивация еще не прошла успешно."
     }
 }
