--- a/plugins/GeoIp2/lang/ru.json
+++ b/plugins/GeoIp2/lang/ru.json
@@ -3,22 +3,32 @@
         "AssumingNonApache": "Не удается найти apache_get_modules функцию, видимо, это не веб-сервер Apache.",
         "CannotFindGeoIPServerVar": "Переменная %s не установлена. Ваш сервер не может быть сконфигурирован правильно.",
         "CannotListContent": "Не удалось перечислить содержимое для %1$s: %2$s",
+        "CannotSetupGeoIPAutoUpdating": "Похоже, вы храните свои базы геолокации за пределами Matomo (мы можем сказать, что в подкаталоге misc нет баз данных, но ваш GeoIP работает). Matomo не может автоматически обновлять ваши базы геолокации, если они находятся за пределами каталога misc.",
         "CannotUnzipGeoIPFile": "Не получилось распаковать файл GeoIP за %1$s:%2$s",
         "DownloadingDb": "Загрузка %s",
         "DownloadNewDatabasesEvery": "Обновлять базу раз в",
+        "FatalErrorDuringDownload": "При загрузке этого файла произошла неустранимая ошибка. Возможно, что-то не так с вашим интернет-соединением, с загруженной вами базой геолокации или Matomo. Попробуйте загрузить и установить его вручную.",
         "FoundApacheModules": "Matomo нашёл следующие модули Apache",
         "GeoIPImplHasAccessTo": "Этот вариант реализации GeoIP имеет доступ к следующим базам данных",
         "GeoIPDatabases": "Базы данных GeoIP",
         "GeoIPLocationProviderDesc_ServerBasedAnonWarn": "Подсказка: анонимизация IP не оказывает на эффект на получение локации пользователей таким способом. Перед тем, как использовать его с анонимизацией IP, убедитесь, что это не противоречит законодательству вашей страны.",
         "GeoIPLocationProviderNotRecommended": "Геолокация работает, но вы не используете один из рекомендованных провайдеров.",
+        "GeoIPNoDatabaseFound": "GeoIP не смогла найти какую-либо базу данных.",
         "GeoIPNoServerVars": "Matomo не может найти GeoIP %s переменные.",
         "GeoIPServerVarsFound": "Matomo нашёл следующие переменные GeoIP: %s",
+        "GeoIPUpdaterInstructions": "Введите ссылки для загрузки ваших баз данных ниже. Если вы приобрели базы данных у %3$sdbip%4$s или %1$sMaxMind%2$s, вы можете найти эти ссылки в вашей учетной записи dbip или MaxMind. Пожалуйста, свяжитесь с вашим поставщиком базы данных геолокации, если у вас есть проблемы с доступом к ним.",
+        "GeoIPUpdaterIntro": "Matomo в настоящее время управляет обновлениями для следующих баз данных",
         "GeoIPVariablesConfigurationHere": "Вы можете сконфигурировать используемые серверные переменные %1$s здесь %2$s.",
+        "GeoLiteCityLink": "Если вы используете базу данных dbip city lite, воспользуйтесь этой ссылкой: %1$s %2$s %3$s",
+        "HowToSetupGeoIP": "Как настроить точную геолокацию с помощью dbip",
+        "HowToSetupGeoIP_Step1": "%1$sЗагрузите%2$s базу данных DBIP City Lite с %3$s dbip%4$s.",
+        "HowToSetupGeoIP_Step4": "Вы только что настроили Matomo для использования DBIP, что означает, что вы сможете видеть регионы и города ваших посетителей вместе с очень точной информацией о стране.",
         "HowToSetupGeoIPIntro": "Кажется, что у вас не настроено определено локации посетителей с помощью GeoIP. Это полезная \"штука\" - без нее вы не сможете достаточно точно определять местонахождение посетителей. И вот как вы можете быстро все настроить:",
         "HowToInstallApacheModule": "Как установить GeoIP модуль для Apache?",
         "HowToInstallNginxModule": "Как установить GeoIP модуль для Nginx?",
         "HttpServerModule": "HTTP Серверный модуль",
         "ISPDatabase": "База провайдеров",
+        "IWantToDownloadFreeGeoIP": "Я хочу скачать бесплатную базу данных DBIP...",
         "LocationDatabase": "Расположение базы данных",
         "LocationDatabaseHint": "Расположение базы данных страны, региона или города.",
         "LocationProviderDesc_Php_WithExtension": "Этот механизм определения местонахождения ускорен установленным расширением %1$smaxminddb%2$s.",
@@ -27,7 +37,10 @@
         "UnsupportedArchiveType": "Встретился неподдерживаемый тип архива %1$s.",
         "UpdaterHasNotBeenRun": "Обновления никогда не производились.",
         "UpdaterScheduledForNextRun": "Это запланированный запуск команды core:archive при следующем выполнении cron-задачи.",
+        "ShowCustomServerVariablesConfig": "Я использую модуль сервера Geoip2 (Nginx, Apache ...) и хочу настроить переменные сервера",
         "ServerBasedVariablesConfiguration": "Конфигурация серверных переменных, использованная модулями сервера GeoIP 2.",
-        "ServerVariableFor": "Серверная переменная для %s"
+        "ServerVariableFor": "Серверная переменная для %s",
+        "SetupAutomaticUpdatesOfGeoIP": "Настройка автоматических обновлений баз геолокации",
+        "ThisUrlIsNotAValidGeoIPDB": "Загруженный файл не является действительной базой данных геолокации. Пожалуйста, проверьте URL или скачайте файл вручную."
     }
 }
