--- a/plugins/Live/lang/fi.json
+++ b/plugins/Live/lang/fi.json
@@ -4,7 +4,7 @@
         "CalculatedOverNPageViews": "Laskettu käyttämällä tämän kävijän %1$s viimeisintä nähtyä sivua.",
         "ClickToViewMoreAboutVisit": "Klikkaa saadaksesi lisätietoa tästä käynnistä",
         "ClickToViewAllActions": "Klikkaa näyttääksesi tarkat tiedot tästä ryhmästä",
-        "ConvertedNGoals": "Konvertoidut %s tavoitteet",
+        "ConvertedNGoals": "Konvertoituneita tavoitteita %s",
         "FirstVisit": "Ensimmäinen käynti",
         "GoalType": "Tyyppi",
         "HideMap": "piilota kartta",
@@ -20,7 +20,7 @@
         "NbVisitor": "1 kävijä",
         "NbVisitors": "%s kävijää",
         "NextVisitor": "Seuraava kävijä",
-        "NoMoreVisits": "Ei enempää käyntejä tälle kävijälle.",
+        "NoMoreVisits": "Tälle kävijällä ei ole enempää käyntejä.",
         "PageRefreshed": "Montako kertaa tätä sivua katsottiin \/ päivitettiin peräkkäin.",
         "PluginDescription": "Tarjoaa käyntilokin ja vimpaimen, jolla voi seurata kävijöitä reaaliajassa. Mahdollistaa myös kävijäprofiilin näyttämisen mille tahansa käyttäjälle.",
         "PreviousVisitor": "Edellinen kävijä",
@@ -38,6 +38,8 @@
         "VisitsLog": "Käyntiloki",
         "QueryMaxExecutionTimeExceeded": "Tämän kyselyn suorittaminen kesti liian kauan.",
         "QueryMaxExecutionTimeExceededReasonDateRange": "Näin saattaa tapahtua, jos aikaväli on liian suuri. Yritä uudelleen käyttäen lyhyempää aikaväliä.",
+        "QueryMaxExecutionTimeExceededReasonSegment": "Tämä voi tapahtua, jos valittu segmentti ei vastaa yhteenkään käyntiin. Tarkista valitsemasi segmentti.",
+        "QueryMaxExecutionTimeExceededReasonUnknown": "Yritä uudelleen. Jos tämä tapahtuu toistuvasti, ole yhteydessä tukeen tai ylläpitoon.",
         "VisitorLog": "Käyntiloki",
         "VisitorLogDocumentation": "Tämä taulukko näyttää viimeisimmät käynnit valitulta aikaväliltä. Voit nähdä, koska viimeisin käynti oli pitämällä hiirtä päiväyksen päällä. %1$s Jos aikaväli sisältää tämän päivän, näet kävijät reaaliaikaisena! %2$s Näytetyt tiedot ovat aina reaaliaikaisia, riippumatta arkistoinnista.",
         "VisitorLogNoDataMessagePurged": "Tiedot on luultavasti poistettu, koska säännöllinen vanhan raakadatan poisto on käytössä, ja tämän raportin päivämäärä on yli %s päivää sitten. Pääkäyttäjä voi muuttaa tätä asetusta kohdassa Ylläpitö => Yksityisyys.",
